make sure name column will not be too wide if name is very long

--- a/stylesheets/alerts.less
+++ b/stylesheets/alerts.less
@@ -17,3 +17,15 @@
     padding: 17px 0px;
   }
 }
+
+.entityListContainer {
+  .name {
+    max-width: 250px;
+  }
+  .edit {
+    min-width: 60px;
+  }
+  .delete {
+    min-width: 77px;
+  }
+}
